--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <div class="wall">
             <img src="./images/galaxy.png" alt="">
         </div>
+        <div id ="myAnimation"><img src="./images/star.png" alt=""></div>
     </div>
-    <div class="floor">
 
+    <div class="floor">
+        <button onclick="myMove()">Click Me</button> 
     </div>
 
     <script src="index.js"></script>
