added deciber metor

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         </div>
     </div>
     <div class="floor">
-
+        <div class="unique-id"></div>
+        <div class="db-level"></div>
     </div>
 
     <script src="index.js"></script>
