--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div id ="myAnimation"><img src="./images/star.png" alt=""></div>
     </div>
     <div class="floor">
-        <div class="unique-id"></div>
-        <div class="db-level"></div>
-        <button onclick="myMove()">Click Me</button> 
+        <div id="meter" class="icon-microphone"><button onclick="myMove()">Click Me</button></div>
+        <div id="db-level"></div>
     </div>
 
     <script src="index.js"></script>
+    <script src="decibelmeter.js"></script>
 </body>
 </html>
