--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <div class="wall">
             <img src="./images/galaxy.png" alt="">
         </div>
-        <div id ="myAnimation"><img src="./images/star.png" alt=""></div>
+        <img src="./images/star.png" alt="">
     </div>
     <div class="floor">
-        <div class="unique-id"></div>
-        <div class="db-level"></div>
         <button onclick="myMove()">Click Me</button> 
     </div>
 
