visualize sound level

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <img id="stars" src="./images/star.png" alt="">
     </div>
     <div class="floor">
-        <button onclick="myMove()">Click Me</button> 
+        <div id="meter" class="icon-microphone"><button onclick="myMove()">Click Me</button></div>
+        <div id="db-level"></div>
     </div>
 
+    <script src="decibelmeter.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
