--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="wall">
-            <img class = "galaxys" src="./images/galaxy.png" alt="">
+            <img class = "galaxys" src="./images/galaxy.png" id="black-hole" alt="">
         </div>
         <img id="stars" src="./images/star.png" alt="">
     </div>
