--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="wall">
+        <div class="wall" id="wall">
             <img class = "galaxys" src="./images/galaxy.png" id="black-hole" alt="">
         </div>
         <img id="stars" src="./images/star.png" alt="">
