--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="container">
         <div class="wall" id="wall">
-            <img class = "galaxys" id="galax" src="./images/galaxy.png" id="black-hole" alt="">
+            <img class = "galaxys" id="galax" src="./images/galaxy.png"  alt="">
         </div>
         <img id="stars" src="./images/star.png" alt="">
     </div>
