--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img id="stars" src="./images/star.png" alt="">
     </div>
     <div class="floor">
-        <div id="meter" class="icon-microphone"><button onclick="myMove()">Click Me</button></div>
+        <div id="meter" class="icon-microphone"><button class = "btn"onclick="myMove()">Start game</button></div>
         <div id="db-level"></div>
     </div>
 
