--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         move();}, 10);
                     }
                     else{
-                    alert("Вы выйграли урааааа");
+                    alert("Вы выиграли урааааа");
                     }
                 }
                 move();
